--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div id="root">
-
+        <h1>{{message}}</h1>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
